[add] zstandard compression support for the metrics store + default to it.